fix: gaps

--- a/app/globals.css
+++ b/app/globals.css
@@ -117,7 +117,7 @@ h2 span {
 }
 
 .checkout-form-input {
-  @apply appearance-none rounded-lg w-full bg-white text-sm leading-6 px-4 py-2 shadow-sm;
+  @apply appearance-none rounded-lg w-full bg-white text-sm leading-6 px-4 py-2 shadow-sm !ring-violet-600;
 }
 .checkout-form-label {
   @apply cursor-pointer block font-medium;
